# block-friends

./: .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  app.py  avatar.py  build_universal_svg.py  docker-compose.yml  door_agents.py  fly.toml  generate.py  mise.toml  pyproject.toml  test-grid.html  test_shadow_visual.py  test_version_endpoints.md
.claude/: settings.local.json
.github/workflows/: ci.yml
.private-journal/2025-07-24/: 11-30-01-015253.embedding  11-30-01-015253.md  11-34-51-115440.embedding  11-34-51-115440.md  11-41-50-787246.embedding  11-41-50-787246.md  11-44-16-899002.embedding  11-44-16-899002.md  12-04-27-454935.embedding  12-04-27-454935.md  13-30-45-159653.embedding  13-30-45-159653.md  13-35-10-648345.embedding  13-35-10-648345.md  13-44-01-242800.embedding  13-44-01-242800.md  13-46-54-260292.embedding  13-46-54-260292.md  13-49-34-229472.embedding  13-49-34-229472.md  13-52-04-928522.embedding  13-52-04-928522.md  13-53-54-076641.embedding  13-53-54-076641.md  13-57-04-087318.embedding  13-57-04-087318.md  14-08-27-422030.embedding  14-08-27-422030.md  14-14-10-506004.embedding  14-14-10-506004.md  14-23-08-818009.embedding  14-23-08-818009.md  15-29-50-974560.embedding  15-29-50-974560.md
.private-journal/2025-07-25/: 11-43-32-827680.embedding  11-43-32-827680.md  11-49-25-098266.embedding  11-49-25-098266.md  11-50-59-355771.embedding  11-50-59-355771.md  12-31-24-419601.embedding  12-31-24-419601.md  12-35-43-509300.embedding  12-35-43-509300.md  12-42-49-680998.embedding  12-42-49-680998.md  12-58-28-929595.embedding  12-58-28-929595.md  13-02-12-831468.embedding  13-02-12-831468.md  13-05-51-566304.embedding  13-05-51-566304.md
assets/: body_shapes.json  colors.json  config.json  probabilities.json
docs/: AUDIT-2025-10-28-FULL.md  AUDIT-2025-10-28.md  transitions-api.md  universal-svg.md
docs/plans/: 2025-10-29-avatar-shadow-design.md
scripts/: README.md  create_reference_shapes.py  generate_emote_variants.py
static/: animations.html  index.html  sitemap.html  test-grid.html  transitions-demo.html
tests/: conftest.py  interactive_test.html  test_api_endpoints.py  test_api_transitions.py  test_asset_loading.py  test_asset_loading_validation.py  test_avatar_id.py  test_body_generation.py  test_bundle_comprehensive.py  test_bundle_transitions.py  test_css_generation.py  test_deterministic_edge_cases.py  test_door_agents.py  test_e2e_transitions.py  test_error_handling.py  test_feet_generation.py  test_frame_parameter_validation.py  test_frame_validation.py  test_hair_generation.py  test_input_sanitization.py  test_nodes_generation.py  test_rate_limiting.py  test_security_input_sanitization.py  test_security_middleware.py  test_shadow.py  test_shadow_comprehensive.py  test_static_files.py  test_static_files_middleware.py  test_transition_generation.py  test_transitions.py  test_transitions_comprehensive.py  test_universal_eyes.py  test_universal_mouths.py  test_universal_parameter.py  test_universal_svg_comprehensive.py  test_visual_regression.py  visual_test.html
