[project]
name = "sprite-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "cairosvg>=2.8.2",
    "pypdf2>=3.0.1",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit[toml]>=1.7.10",
    "types-Pillow>=10.0.0",
]
redis = [
    "redis>=5.0.0"
]

# Ruff configuration - modern Python linter and formatter
[tool.ruff]
line-length = 100
target-version = "py312"

# Enable pycodestyle (E, W), Pyflakes (F), isort (I), pyupgrade (UP), etc.
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value in comparison
    "ISC001",  # Conflicts with formatter
    "G004",    # Logging f-string (prefer for readability)
    "B904",    # Exception chaining (not always needed)
    "EM101",   # Exception string in variable
    "EM102",   # Exception f-string
    "TRY003",  # Long messages in exception
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",     # Unused arguments (common in fixtures)
    "PT011",   # pytest.raises without match parameter
    "S101",    # Use of assert
]
"scripts/**/*.py" = [
    "T20",     # Allow print in scripts
]

[tool.ruff.lint.isort]
known-first-party = ["avatar", "door_agents"]

# MyPy configuration - static type checking
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter checking
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true

# Bandit configuration - security linting
[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = [
    "B101",  # assert_used (common in tests)
    "B104",  # hardcoded_bind_all_interfaces (development server)
    "B311",  # random (not for cryptographic use)
    "B314",  # xml.etree.ElementTree.parse (parsing trusted local SVG files)
    "B405",  # xml.etree.ElementTree import (parsing trusted local SVG files)
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --cov=. --cov-report=term-missing --cov-report=html"
